force-app/main/default/objects/JobOrderClocking__c/JobOrderClocking__c.object-meta.xml
<CustomObject>
    <label>Job Order Clocking</label>
    <nameField>
        <displayFormat>JOC-{0000}</displayFormat>
        <label>Job Order Clocking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Order Clocking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>