force-app/main/default/objects/JobOrderClocking__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By Mayank Pant
Created Date: 26th Nov 2020
Purpose: This field is used in Flow to identify if Job order clockin is completed already.</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>