force-app/main/default/objects/JobOrderClocking__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>JobOrderClocking</relationshipLabel>
    <relationshipName>Job_Order_Clocking</relationshipName>
    <type>Lookup</type>
</CustomField>