force-app/main/default/objects/JobOrderClocking__c/fields/JobOrder__c.field-meta.xml
<CustomField>
    <fullName>JobOrder__c</fullName>
    <label>Job Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Job Order Clocking</relationshipLabel>
    <relationshipName>Job_Order_Clocking</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>