force-app/main/default/objects/JobOrderClocking__c/fields/ServiceResource__c.field-meta.xml
<CustomField>
    <fullName>ServiceResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>JobOrderClocking</relationshipLabel>
    <relationshipName>Job_Order_Clocking</relationshipName>
    <type>Lookup</type>
</CustomField>