force-app/main/default/objects/JobOrderClocking__c/fields/Time_Taken__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken__c</fullName>
    <description>Created By - Mayank Pant
Created Date - 27th Nov 2020
User Story - https://jira.hyundai-autoever.eu/browse/GD-1448
Purpose -  This field will show the time taken</description>
    <formula>ROUND(MOD((EndTime__c - StartTime__c)*24,24),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Taken (Hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>